<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IH+</string>
    <string name="about">IH+ transforms everyday landscapes into sites of bio-cultural
diversity and wild happenings. Mobile phones are generally deployed as
devices of rapid communication and consumerism, to get you what you
want and where you want as quickly as possible. This app re-uses this
technology as a tool of environmental imagination and slowing-down. By
importing "nature" and wilderness into virtually any location, IH+
encourages its users to experience seemingly common places as sublime
landscapes.\nwww.ecoarttech.org</string>
    <string name="cont">continue &gt;</string>
    <string name="create_hike">Create a new indeterminate hike</string>
    <string name="create_hike_desc">hike description:</string>
    <string name="create_hike_name">hike name:</string>
    <string name="create_hike_username">your name:</string>
    <string name="credits">
        a project by ecoarttech\n
		(leila nadir &amp; cary peppermint)\n
		\n
		software development:\n
		polina koronkevich\n
		\n
		created with funding from:\n
		new york state council on the arts\n
		new york foundation for the arts\n
		whitney museum of american art\n
		university of rochester\n
		\n
		(cc) 2011 ecoarttech\n
		attribution - noncommercial\n
		share alike\n
		www.ecoarttech.org
    </string>
    <string name="current_hike">your current hike</string>
    <string name="empty_search">no search results here</string>
    <string name="enter_start">enter start address</string>
    <string name="enter_end">enter end address</string>
    <string name="hit_trail">hit the trail &gt;</string>
    <string name="search_hike">Search for an indeterminate hike</string>
    <string name="search_hint">Search for a city or zipcode</string>
    <string name="share_hike">Your hike was successfully uploaded to the IH+ database!</string>
    <string name="this_is_vista">This is a IH+ Scenic Vista:</string>
    <string name="welcome">Welcome!\nIH+ facilitates ecological awareness of everyday environments.</string>
</resources>
