<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	> 
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/create_hike_username"/>
	<EditText android:id="@+id/hike_username"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/create_hike_name"/>
	<EditText android:id="@+id/hike_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/create_hike_desc"/>
	<EditText android:id="@+id/hike_desc"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
</LinearLayout>