<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	> 
	<!-- Top Bar -->
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/hiking_top_bar">
		<ImageView android:id="@+id/hike_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignParentRight="true"
			android:src="@drawable/hikes_top_btn"
			android:clickable="true"
			android:onClick="onHikeClick"/>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toLeftOf="@id/hike_btn"
			android:src="@drawable/search_top_btn"
			android:clickable="true"
			android:onClick="onSearchClick"/>
	</RelativeLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/tabbar_gray"
		android:padding="15dp">
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/boldWhite"
			android:text="@string/welcome"/>
		</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/light_gray"
		android:paddingBottom="10dp"
		android:layout_marginBottom="2dp"
		android:clickable="true"
		android:onClick="onHikeClick">
	    <ImageView android:id="@+id/hike_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/create_intro_img"
			android:layout_margin="10dp"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/hike_icon"
			android:layout_centerVertical="true"
			android:textColor="#000000"
			android:textStyle="bold"
			android:text="@string/create_hike"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/light_gray"
		android:paddingBottom="10dp"
		android:clickable="true"
		android:onClick="onSearchClick">
	    <ImageView android:id="@+id/view_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/search_intro_img"
			android:layout_margin="10dp"/>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/view_icon"
			android:layout_centerVertical="true"
			android:textColor="#000000"
			android:textStyle="bold"
			android:text="@string/search_hike"/>
	</RelativeLayout>
	<ImageView 
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:src="@drawable/main_screen_bkg_img"/>
</LinearLayout>