<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	> 
	<!-- Top Bar -->
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/header_gray">
		<ImageView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:src="@drawable/create_top_bar"/>
		<ImageView android:id="@+id/search_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignParentRight="true"
			android:src="@drawable/hikes_top_btn"
			android:clickable="true"
			android:onClick="onHikesClick"/>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toLeftOf="@id/search_btn"
			android:src="@drawable/search_top_btn"
			android:clickable="true"
			android:onClick="onSearchClick"/>
	</RelativeLayout>
	<!-- Hike Info Bar -->
	<RelativeLayout android:id="@+id/hike_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="10dp"
		android:background="@color/tabbar_gray"
		android:visibility="gone">
		<TextView android:id="@+id/hike_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_centerVertical="true"
			android:text="@string/current_hike"
			android:textColor="#FFFFFF"
			android:textStyle="bold"/>
		<ImageView android:id="@+id/hike_task"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignParentRight="true"
			android:src="@drawable/notes_tab"
			android:clickable="true"
			android:onClick="onHikeTaskClick"/>
		<ImageView android:id="@+id/hike_gallery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toLeftOf="@id/hike_task"
			android:src="@drawable/gallery_tab"
			android:clickable="true"
			android:onClick="onHikeGalleryClick"/> 
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<com.google.android.maps.MapView
			android:id="@+id/map_view"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:clickable="true"
			android:apiKey="02hzpyogklthR3YriJBgTP1dlr1jvpQhIJFcIsQ"/> 
		<!-- Vista Info bar -->
		<LinearLayout android:id="@+id/vista_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:orientation="vertical"
			android:padding="10dp"
			android:background="@drawable/vista_bg"
			android:visibility="gone">
			<TextView android:id="@+id/vista_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/this_is_vista"
				android:textStyle="bold"
				android:textColor="#000000"/>
			<TextView android:id="@+id/vista_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:textColor="#000000"/>
			<TextView android:id="@+id/vista_cont"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_gravity="right"
				android:textColor="@color/link_blue"
				android:textStyle="bold"
				android:clickable="true"
				android:text="@string/cont"/> 
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>
